# conway_rust

./: Cargo.toml
src/: life.txt
